Revision 17  : ChangeLog updated by  abhishekdelta  on  2010-05-31 02:17:2
---------------------------------------------------------------
Revision 16  : Patch by Chakra applied : Breadcrumb Submenu by  abhishekdelta  on  2010-05-31 01:56:4
---------------------------------------------------------------
Revision 15  : Fixed a bug in pagesettings.lib.php by  abhishekdelta  on  2010-05-31 01:36:4
---------------------------------------------------------------
Revision 14  : Installed Pragyan CMS v3 by  abhishekdelta  on  2010-05-31 01:31:5
---------------------------------------------------------------
Revision 13  : Escaping all form inputs by  abhishekdelta  on  2010-05-30 02:00:4
---------------------------------------------------------------
Revision 12  : Making a bit secure against SQL attacks by  abhishekdelta  on  2010-05-27 10:16:1
---------------------------------------------------------------
Revision 11  : Adding Developer Notes and Changelog by  abhishekdelta  on  2010-05-26 13:55:2
---------------------------------------------------------------
Revision 10  : Reloading INSTALL Folder by  abhishekdelta  on  2010-05-24 22:53:1
---------------------------------------------------------------
Revision 9  : Deleting INSTALL folder. Heirarchy messed. by  abhishekdelta  on  2010-05-24 22:47:2
---------------------------------------------------------------
Revision 8  : Adding Modules by  abhishekdelta  on  2010-05-24 03:38:2
---------------------------------------------------------------
Revision 7  : Adding Templates by  abhishekdelta  on  2010-05-24 03:12:1
---------------------------------------------------------------
Revision 6  : Adding core libraries by  abhishekdelta  on  2010-05-24 02:33:4
---------------------------------------------------------------
Revision 5  : Adding some more files by  abhishekdelta  on  2010-05-24 02:26:1
---------------------------------------------------------------